Fixed overflow in burger menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,12 @@
     --foreground: #ededed;
   }
 }
+*{
+  /* border: 1px solid red; */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
   color: var(--foreground);
