--- a/src/components/BurgerMenu.module.css
+++ b/src/components/BurgerMenu.module.css
@@ -1,24 +1,30 @@
 .burgerMenuContainer {
   position: absolute;
-  top: 103%;
-  transition: all 0.25s ease-in-out;
-  border-radius: 1rem 0 0 1rem;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(10px);
-  border-left: 1px solid whitesmoke;
+  top: 3rem;
+  right: -1rem;
+  overflow-x: hidden;
   .burgerListMenu {
+    transition: all 0.25s ease-in-out;
+    border-radius: 0 0 0 3rem;
+    background: #25252577;
+    backdrop-filter: blur(4px);
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     padding-block: 1rem;
     & > li {
-      font-size: 1.2rem;
-      color: whitesmoke;
-      transition: all 0.35s ease-in-out;
-      padding-left: 3rem;
-      padding-right: 1rem;
-      text-align: right;
+      margin-block: 0.5rem;
+      display: flex;
+      justify-content: flex-end;
+      padding: 0 1rem 0 3rem;
+      & > a {
+        font-size: 1rem;
+        font-family: Poppins, sans-serif;
+        font-weight: 200;
+        letter-spacing: 2px;
+        color: #f5f5f5;
+        color: whitesmoke;
+      }
     }
   }
 }
