--- a/src/components/NavbarPages.module.css
+++ b/src/components/NavbarPages.module.css
@@ -7,7 +7,7 @@
   justify-content: space-around;
   align-items: center;
   background: #252525aa;
-  z-index: 2;
+  /* z-index: 2; */
 }
 
 .pageTitleActive {
